@@ -23,6 +23,7 @@ ChangeLog
 
 [-] * Add ID for MTK1/MTK2 phones (bug#1051).
 [+] * Add DecodePDU to Python bindings.
+[+] * Added sample SQL trigger for SMSD polls.
     
 20091203 - 1.26.92
 
